--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
  		
  		<div>
  			<select name="practice_time">
-			  <option value="presentation">Presentation Mode</option> 
-			  <option value="10m">10 minutes</option>
+			  <option value="1">Presentation Mode</option> 
+			  <option value="10">10 minutes</option>
 			  <option value="15">15 minutes</option>
 			  <option value="30">30 minutes</option>
 			  <option value="60">1 hour</option>
@@ -34,7 +34,7 @@
  		</div>
  		<br>
  		<div>
- 			<input type="submit"/>
+ 			<input type="submit" value="Start" />
  		</div>
  		</form>
   	</div>
