--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Yoga Project</title>
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-  
+
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,9 +13,8 @@
 <body>
   <div  class="container-fluid">
   	<div class="row no-gutter">
-  		<div id="image-display" class="col-md-12">
-  		
- 		  </div>
+  		<div id="image-display" class="col-md-12"></div>
+      <div id="thumbnails"></div>
   	</div>
   </div>
 
